...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingActivity">

    <Button
        android:id="@+id/detailed_direction_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="30dp"
        android:onClick="onDetailedDirectionButton"
        android:paddingVertical="10dp"
        android:text="Detailed Directions"
        app:layout_constraintBottom_toTopOf="@+id/brief_direction_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/brief_direction_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:onClick="onBriefDirectionButton"
        android:paddingVertical="15dp"
        android:text="Brief Directions"
        app:layout_constraintBottom_toTopOf="@+id/summary_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_direction_button" />

    <Button
...
